# optics-lib

./: .gitignore  .gitmodules  CMakeLists.txt  libopt.cmake
include/optics/: ray.hpp  unit.hpp
include/optics/geometry/: ray.hpp
include/optics/unit/: literal.hpp  math.hpp  quantity.hpp  si.hpp
include/optics/wave/: ray.hpp
testsuite/: sandbox.cpp
